# llm-student-onboarding

./: .gitignore  README.md  chat.py  chatpdf.py  data_loaders.py  data_loading.py  eval.py  eval_results.csv  hyde.py  multi_query.py  prompts.py  pyproject.toml  rags.py  react.py  requirements.txt  run.py  self_reflective_rag.py  simple_chat.py  utils.py
chat_app/: chat_app.py  prompts.py  rags.py  run.py  state.py  style.py  utils.py
data/docx/: Canned Responses - Applicants and Potential Applicants.docx  ISM 6251 Syllabus Spring 24 - 001.docx  Mock Questions.docx  QMB_6304_syllabus_fall_2023_updated-1.docx  Syllabus_ISM6225_S24.docx  Welcome.docx
scripts/: simple_chat.py  test_data.csv  test_data_gen.py
webui/: requirements.txt
webui/chat_app/: chat_app.py  state.py
